<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/messagePage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dip"
            android:layout_marginTop="4.799988dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:gravity="center"
                android:text="@string/messagepage_name"
                android:textColor="#ff666666"
                android:textSize="10.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/workPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dip"
            android:layout_marginTop="4.799988dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:gravity="center"
                android:text="@string/workhomepage_name"
                android:textColor="#ff666666"
                android:textSize="10.0sp" />
        </LinearLayout>

  <!--      <LinearLayout
            android:id="@+id/analyticPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dip"
            android:layout_marginTop="4.799988dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:gravity="center"
                android:text="@string/sumerPage_name"
                android:textColor="#ff666666"
                android:textSize="10.0sp" />
        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/myinfoPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dip"
            android:layout_marginTop="4.799988dip"
            android:layout_weight="1.0"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.0dip"
                android:gravity="center"
                android:text="@string/myPage_name"
                android:textColor="#ff666666"
                android:textSize="10.0sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/lineView"
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:layout_above="@id/tabsLayout"
        android:background="#ffb8bbc2" />

    <FrameLayout
        android:id="@+id/contentpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/lineView" />
</RelativeLayout>